--- a/Notes_leo/LOP/Article_ACM/LOP_article_ACM.tex
+++ b/Notes_leo/LOP/Article_ACM/LOP_article_ACM.tex
@@ -146,16 +146,7 @@ The results of the proposed model are then presented. We picked out the best mod
 This paper is organized as follows. In sections 2 we introduce the state of the art in conditional models through three well known models: the RBM, the CRBM and the FGCRBM. The orchestration inference task is presented in the section 3 along with an evaluation framework based on a frame-level accuracy measure. The previously introduced models are then evaluated in this framework and the results displayed. The section 4 introduces a real-time \textit{projective} orchestration system using the presented architectures.
 
 \section{State of the art}
-\subsection{Data representation}
-\begin{figure}
-\centering
-\includegraphics[scale=0.15]{representation_donnes}
-\caption{\textit{Data representation for a single piano}. The pianoroll is a representation of musical events, discrete on both frequency scale (pitch) and the time scale (frames). A pitch $p$ at time $t$ can be either on or off, which is represented by a one or a zero on the pianoroll. To represent an orchestra, the pianorolls of each instruments are simply concatenated along the pitch dimension.}
-\label{fig:pianoroll}
-\end{figure}
-To model sequences of symbolic music, the pianoroll representation is often used. A pianoroll is a matrix whose rows and columns are a discretisation of pitch and time \prettyref{fig:pianoroll}. Note that this discretisation flows naturally from the scores notation in western music since notes are aligned on a discrete pitch scale and rhythmically on the beat. The pitch $p$ being played at time $t$  is then represented in the pianoroll representation by $Pianoroll(p,t) = 1$, $Pianoroll(p,t) = 0$ meaning that pitch $p$ is not played at time $t$. The dynamics are ignored and each time frame is a binary vector that indicates either a pitch is on or off.
-\label{sec:orchestral_vect_def}
-This representation, usually defined for a single polyphonic instrument can easily be extended to an orchestra composed by N instruments by simply concatenating the pianoroll of each instrument over the pitch dimension. Note that we respect the usual simplifications used when writing orchestral scores which consists in grouping all the instruments of a same section. For instance, the section \textit{violin 1}, composed by many instrumentalists (about 10), is represented as a unique instrument.
+The three model we have used in our work derive from the Graphical Probabilistic Model (GPM, \cite{fischer2014training}) theory. The RBM, CRBM and FGCRBM (\cite{taylor2009composable}) are then presented by increasing level of complexity, each model adding on the previously defined model a new element.
 
 \subsection{Restricted-Boltzmann Machine}
 \begin{figure}
@@ -182,7 +173,12 @@ p(v_{i}=1|\textbf{h}) &= sigm \left( b_{i}^{(v)} + \sum_{j}W_{ij}h_{j} \right)\\
 p(h_{j}=1|\textbf{v}) &= sigm \left( b_{j}^{(h)} + \sum_{i}W_{ij}v_{i} \right)
 \end{align}
 where $sigm$ is the sigmoid function.
-It has been proved that the samples we obtain after an infinite number of iteration will be drawn from the joint distribution of the visible and hidden units of our model. An other approximation consists in starting the Gibbs chain from the sample $v^{(l)}$, which increases the convergence of the chain, and to limit the number of alternate sampling steps to a fixed number K, which leads to the CD-K algorithm used to train a \gls{RBM}.
+It has been proved that the samples we obtain after an infinite number of iteration will be drawn from the joint distribution of the visible and hidden units of our model. An other approximation consists in starting the Gibbs chain from the sample $v^{(l)}$, which increases the convergence of the chain, and to limit the number of alternate sampling steps to a fixed number K, which leads to the CD-K algorithm. Hence, the CD-K algorithm can be summed up in two phase, a first one which consists in evaluating the model driven terms by running K steps of a  Gibbs sampling chain, then computing the update terms for each parameter. In a RBM, this lead to the following update rules for the parameter
+\begin{align}
+\Delta W_{ij} &= <v_{i}h_{j} >_{data} - <v_{i}h_{j} >_{model}\\
+\Delta b_{i}^{(v)} &= <v_{i}>_{data} - <v_{i}>_{model}\\
+\Delta b_{j}^{(h)} &= <h_{j} >_{data} - <h_{j} >_{model}
+\end{align}
 
 \subsection{Conditional RBM}
 \begin{figure}
@@ -191,16 +187,22 @@ It has been proved that the samples we obtain after an infinite number of iterat
 \caption{\textit{Conditional RBM}. A layer of context units is added to the standard RBM architectures. Those context units linearly modify the bias of both visible and hidden units.}
 \end{figure}
 The \gls{CRBM} model (\cite{taylor2009composable}) is a standard \gls{RBM} in which a dynamic biases conditioned is added to the visible and hidden units. The dynamic bias linearly depends of context units $\bm{x}$.
-To model time series, if we consider that the visible units represent the current time frame, those context units can be defined as the concatenation of the N last time frames. We call this vector $\bm{v}_{k<t} = \left( v_{1}^{(t-N)} , ... , v_{m}^{(t-N)}, ... , v_{1}^{(t)} ... , v_{m}^{(t)} \right)$, where N denotes the order of the model.
+To model time series, if we consider that the visible units $\textbf{v}(t)$ represent the current time frame, those context units can be defined as the concatenation of the N last time frames. We call this vector $\bm{x}(t) = \left( v_{1}^{(t-N)} , ... , v_{m}^{(t-N)}, ... , v_{1}^{(t)} ... , v_{m}^{(t)} \right)$, where N denotes the order of the model.
 The energy function of the Conditional RBM is given by (\prettyref{eq:energy_CRBM})
 \begin{equation}
 \label{eq:energy_CRBM}
-E(v_{t},h_{t}|v_{<t}) = - \sum_{i} \hat{a}_{i,t}v_{i,t} - \sum_{ij}W_{ij}v_{i,t}h_{j,t} - \sum_{j} \hat{b}_{j,t}h_{j,t} 
+E(\textbf{v}(t),\textbf{h}(t)|\textbf{x}(t)) = - \sum_{i} \hat{a}_{i}(t)v_{i}(t) - \sum_{ij}W_{ij}v_{i}(t)h_{j}(t) - \sum_{j} \hat{b}_{j}(t)h_{j}(t)
 \end{equation}
-where the biases are defined by $\hat{a}_{i} = a_{i} + \sum_{k}A_{ki}v_{k,<t}$ and $\hat{b}_{j} = b_{j} + \sum_{k}B_{kj}v_{k,<t}$.
+where the biases are defined by $\hat{a}_{i}(t) = a_{i} + \sum_{k}A_{ki}x_{k}(t)$ and $\hat{b}_{j} = b_{j} + \sum_{k}B_{kj}x_{k}(t)$.
 
-If we consider that the visible units represent the orchestral vector for the time frame $t$, conditional units can be used to model the influence of the past orchestral vector $t-1 , ... , t-N$ (the concatenation of those N orchestral frames are then referred to as past orchestral vector) and the (strong) influence of the piano frame at time $t$ over the visible units.
-In the CRBM model, the conditional units are the concatenation of the past orchestral vector and the current piano vector.
+The updates rules are then given by
+\begin{align}
+\Delta W_{ij} &= <v_{i}h_{j} >_{data} - <v_{i}h_{j} >_{model}\\
+\Delta b_{i}^{(v)} &= <v_{i}>_{data} - <v_{i}>_{model}\\
+\Delta b_{j}^{(h)} &= <h_{j} >_{data} - <h_{j} >_{model}\\
+\Delta A_{ik} &=<v_{i}x_{k} >_{data} - <v_{i}x_{k} >_{model}\\
+\Delta B_{jk} &= <h_{j}x_{k} >_{data} - <h_{j}x_{k} >_{model}\\
+\end{align}
 
 This model appeared as an interesting solution in order to model the strong temporal relations underlying in symbolic music data. It can be trained by contrastive divergence, since the marginal probability of visible and hidden units can be easily obtained from the energy distribution.
 
@@ -212,18 +214,30 @@ This model appeared as an interesting solution in order to model the strong temp
 The Factored Gated Conditional RBM model \cite{taylor2009factored} proposes to extend the Conditional RBM model by adding a layer of feature unit $z_{l}$ which modulate the weights of the conditional architecture in a multiplicative way. Hence, the weights of the networks become $\Theta = \left\lbrace W_{ijl} , A_{ikl} , B_{jkl} , \hat{a}_{i} , \hat{b}_{j} \right\rbrace$. This multiplicative influence can be understood as a modification of the energy landscape of the model. Since the number of parameter to train becomes high, the 3 dimensional tensors can be factorized into a product of three matrices by including factors $W_{ijl} = W_{if} . W_{jf} . W_{lf}$.
 The energy function of this Factored Gated Conditional RBM is then given by
 \begin{equation}
-E(v_{t},h_{t}|v_{<t},y_{t}) = -\sum_{f}\sum_{ijl} W_{if}^{v} W_{jf}^{h} W_{lf}^{z} v_{i,t}h_{j,t}z_{l,t} 
-- \sum_{i} \hat{a}_{i,t}v_{i,t} - \sum_{j} \hat{b}_{j,t}h_{j,t}
+E(\textbf{v}(t),\textbf{h}(t)|\textbf{x}(t),\textbf{z}(t)) = -\sum_{f}\sum_{ijl} W_{if}^{v} W_{jf}^{h} W_{lf}^{z} v_{i}(t) h_{j}(t) z_{l}(t) 
+- \sum_{i} \hat{a}_{i}(t)v_{i}(t) - \sum_{j} \hat{b}_{j}(t)h_{j}(t)
 \end{equation}
 where the dynamic biases of the visible and hidden units are defined by
 \begin{equation}
-\hat{a}_{i,t} = a_{i} + \sum_{m} \sum_{kl}A_{im}^{v}A_{km}^{v<t}A_{lm}^{z}v_{k,<t}z_{l,t}
+\hat{a}_{i}(t) = a_{i} + \sum_{m} \sum_{kl}A_{im}^{v}A_{km}^{x}A_{lm}^{z}x_{k}(t)z_{l}(t)
 \end{equation}
 \begin{equation}
-\hat{b}_{j,t} = b_{j} + \sum_{n} \sum_{kl}B_{jn}^{h}B_{kn}^{v<t}B_{ln}^{z}v_{k,<t}z_{l,t}
+\hat{b}_{j}(t) = b_{j} + \sum_{n} \sum_{kl}B_{jn}^{h}B_{kn}^{x}B_{ln}^{z}x_{k}(t)z_{l}(t)
 \end{equation}
 
-The FGCRBM offers the possibility to distinguish between the influence of the current piano vector and the past orchestral vectors by assigning the first one to the features units $z_{l}$ and the second to the context units $x_{k}$.
+The FGCRBM model can be trained by contrastive divergence which lead to the following update rules for the parameter
+\begin{align}
+\Delta b_{i}^{(v)} &= <v_{i}>_{data} - <v_{i}>_{model}\\
+\Delta b_{j}^{(h)} &= <h_{j} >_{data} - <h_{j} >_{model}\\
+\Delta W_{if}^{v} &= <v_{i}\sum_{j} W_{jf} h_{j} \sum_{l} W_{lf} z_{l}>_{data} - <v_{i}W_{jf} h_{j} \sum_{l} W_{lf} z_{l} >_{model}\\
+\Delta W_{jf}^{h} &= <h_{j}\sum_{i}W_{if}v_{i} \sum_{l} W_{lf} z_{l}>_{data} - <h_{j}\sum_{i}W_{if}v_{i} \sum_{l} W_{lf} z_{l}>_{model}\\
+\Delta W_{lf}^{z} &= <z_{l}\sum_{i}W_{if}v_{i} \sum_{j} W_{jf}h_{j}>_{data} - <z_{l}\sum_{i}W_{if}v_{i} \sum_{j} W_{jf}h_{j}>_{model}\\\Delta A_{im}^{v} &= <v_{i}\sum_{k}A_{km}x_{k} \sum_{l}A_{lm}z_{l}>_{data} - <v_{i}\sum_{k}A_{km}x_{k} \sum_{l}A_{lm}z_{l}>_{model}\\
+\Delta A_{km}^{x} &= <x_{k}\sum_{i}A_{im}v_{i} \sum_{l}A_{lm}z_{l}>_{data} - <x_{k}\sum_{i}A_{im}v_{i} \sum_{l}A_{lm}z_{l}>_{model}\\
+\Delta A_{lm}^{z} &= <z_{l} \sum_{i}A_{im}v_{i} \sum_{k}A_{km}x_{k}>_{data} - <z_{l} \sum_{i}A_{im}v_{i} \sum_{k}A_{km}x_{k}>_{model}\\
+\Delta B_{jn}^{z} &=  <h_{j} \sum_{k}B_{kn}x_{k} \sum_{l}B_{ln}z_{l}>_{data} - <h_{j} \sum_{k}B_{kn}x_{k} \sum_{l}B_{ln}z_{l}>_{model}\\
+\Delta B_{kn}^{z} &= <x_{k} \sum_{j}B_{jn}h_{j} \sum_{l}B_{ln}z_{l}>_{data} - <x_{k} \sum_{j}B_{jn}h_{j} \sum_{l}B_{ln}z_{l}>_{model}\\
+\Delta B_{ln}^{z} &= <z_{l} \sum_{j}B_{jn}h_{j} \sum_{k}B_{kn}x_{k}>_{data} - <z_{l} \sum_{j}B_{jn}h_{j} \sum_{k}B_{kn}x_{k}>_{model}
+\end{align}
 
 \subsection{Generative models}
 \begin{figure}
@@ -233,19 +247,27 @@ The FGCRBM offers the possibility to distinguish between the influence of the cu
 \label{fig:FGCRBM_sampling}
 \end{figure}
 %% Role des unités conditionelles et tout le tralala dans les modèles
-The previously introduced models are generative models. After the training phase, the distribution represented by the networks is supposed to be close to the underlying distribution of the data. It is then possible to sample from this distribution to reproduce data that are alike the data of the training set.
-Conditional models allow to impose a certain context, which enables to generate sequences of data under a certain context. We remind that our objective is to transform a sequence of binary vectors drawn from a piano score (referred to as piano vectors) into a sequence of orchestral vectors (\prettyref{sec:orchestral_vect_def}).
+The previously introduced models are generative models. After the training phase, the distribution represented by the networks is supposed to be close to the underlying distribution of the data. It is then possible to sample from this distribution to reproduce data that are alike the data of the training set (\prettyref{fig:FGCRBM_sampling}).
+The generation process can be described as follow. After randomly setting the visible units to a binary value, alternate Gibbs sampling is performed in order to reach the equilibrium distribution of the model. One step of alternate Gibbs sampling consists in sampling the hidden  units knowing the visible units, then sampling the visible units knowing the hidden. In theory the visible sample obtained is from the model distribution after an infinite number of step. In practice, 20 to 100 steps are typically used. In our case, we obtained satisfying results with 40 sampling steps.
 
-Knowing the current piano frame and the recent past orchestral frames, the generation process in a conditional model can be described as follow. After randomly setting the hidden units, a certain number (typically 50) of Gibbs sampling steps are performed in order to reach the equilibrium distribution of the model. This process is described for the FGCRBM model in \prettyref{fig:FGCRBM_sampling}.
-This task correspond exactly to the projection of the piano 
+\subsection{Approximations}
+Note that both during learning and generating phase, when evaluating the model driven term, mean-field values for the visible units can be used in order to diminish the sampling noise. This is not possible for the hidden units since it would violate the information bottleneck principle underlying in the RBM \cite{hinton2010practical}. It is noteworthy that during the learning phase, only a small number of sampling step are performed (1 in our case, rarely more than 10) in the contrastive divergence algorithm. This is because the objective is simply to modify the energy of our model in order to represent the data distribution and not to obtain a sample from the model distribution. Indeed, it has been shown that even a small number of sampling steps guarantee to increase a lower bound on the log-likelihood of the training set under the model distribution \cite{bengio2009learning}. When generating data, we really want to obtain a sample as close as possible to the distribution of the model and then perform a larger number of Gibbs sampling steps.
 
 \section{Projective orchestration}
+Automatic orchestration suffers from the lack of quantitative evaluation. The different work on the domain mainly rely on qualitative evaluation \cite{handelman2012automatic}. To our best knowledge, there has not been any attempt in the automatic orchestration field to define a task associated to a performance measure. We propose here a first attempt in order to fill this gap by defining the orchestration projection task. This task consists in projecting a piano sequence on an orchestra. More precisely, it consists at each time $t$ to generate an orchestral vector knowing the piano frame $Piano(t)$ and the recent past of the orchestral sequence $Orch(t-1),... Orch(t-N)$.
 A projective orchestration task is introduced in this section, along with an evaluation framework and the performances of our model in this framework. The evaluation is a frame-level prediction task that rely on an accuracy measure.
 
 \subsection{Formalization}
-Automatic orchestration suffers from the lack of quantitative evaluation. The different work on the domain mainly rely on qualitative evaluation \cite{handelman2012automatic}. To our best knowledge, there has not been any attempt in the automatic orchestration field to define a task associated to a performance measure. We propose here a first attempt in order to fill this gap by defining the orchestration prediction task.
-
-An orchestral pianoroll is defined by the concatenation of the instrumental pianoroll
+%% Data representation
+Conditional models allow to generate sequences of data under a certain context. Projective orchestration consists in produce an orchestral score conditionally on a piano score. The first step is to use an adapted representation for the piano an orchestra score.
+\begin{figure}
+\centering
+\includegraphics[scale=0.15]{representation_donnes}
+\caption{\textit{Data representation for a single piano}. The pianoroll is a representation of musical events, discrete on both frequency scale (pitch) and the time scale (frames). A pitch $p$ at time $t$ can be either on or off, which is represented by a one or a zero on the pianoroll. To represent an orchestra, the pianorolls of each instruments are simply concatenated along the pitch dimension.}
+\label{fig:pianoroll}
+\end{figure}
+To model sequences of symbolic music, the pianoroll representation is often used. A pianoroll is a matrix whose rows and columns are a discretisation of pitch and time \prettyref{fig:pianoroll}. Note that this discretisation flows naturally from the scores notation in western music since notes are aligned on a discrete pitch scale and rhythmically on the beat. The pitch $p$ being played at time $t$  is then represented in the pianoroll representation by $Pianoroll(p,t) = 1$, $Pianoroll(p,t) = 0$ meaning that pitch $p$ is not played at time $t$. The dynamics are ignored and each time frame is a binary vector that indicates either a pitch is on or off.
+This representation, usually defined for a single polyphonic instrument can easily be extended to an orchestra composed by N instruments by simply concatenating the pianoroll of each instrument over the pitch dimension. 
 \begin{equation}
 Orch = 
 \begin{bmatrix}
@@ -255,9 +277,10 @@ Instrument \ 2\\
 Instrument \ N\\
 \end{bmatrix}
 \end{equation}
-For a sequence of music of length $T$ and with $N$ instruments, $Orch$ is then a matrix of dimension $T \times N.88$. 
-Indeed, we reduce the number of possible pitch to those of a grand piano (88 pitch from ). One can argue that the ambitus of a piccolo for instance goes higher than the highest note of a piano in frequency. This is note the case in symbolic notation, since the score of the piccolo is systematically written several octaves under its real tessitura. In our framework we chose 14 instruments indexed by :
+Note that we respect the usual simplifications used when writing orchestral scores which consists in grouping all the instruments of a same section. For instance, the section \textit{violin 1}, composed by many instrumentalists (about 10), is represented as a unique instrument.
 
+For a sequence of music of length $T$ and with $N$ instruments, $Orch$ is then a matrix of dimension $T \times N.88$. 
+Indeed, we reduce the number of possible pitch to those of a grand piano (88 pitch from ). One can argue that the ambitus of a piccolo for instance goes higher than the highest note of a piano in frequency. This is not the case in symbolic notation, since the score of the piccolo is systematically written several octaves under its real tessitura. In our framework we chose 14 instruments indexed by :
 \begin{tabular}{l l l l l}
 1. Violin & & 6. Timpani & & 11. Oboe\\
 2. Viola & & 7. Trumpet & & 12. Bassoon\\
@@ -266,12 +289,16 @@ Indeed, we reduce the number of possible pitch to those of a grand piano (88 pit
 5. Harp & & 10. French horn &\\
 \end{tabular}
 
+%% Dans el CRBM et le FGCRBM ça donne quoi
+This data representation is adapted to the previously introduced conditional models.
+In the CRBM model, we consider that the visible units represent the orchestral vector for the time frame $t$, conditional units are be used to model the influence of the past orchestral vectors $Orch(t-1) , ... , Orch(t-N)$ and the influence of the piano frame at time $Piano(t)$ over the visible units. The context units are then defined by the concatenation of the past orchestral frames and the current piano frame
+$ Context(t) = \left[ Piano(t)^{T} , Orch(t-1)^{T} , ... , Orch(t-N)^{T}\right]^{T}$.
+
+The FGCRBM model allows to separate the influence of the current piano frame and the past orchestral frames. The current piano frame defines the feature units ($z$) $ Features(t) = Piano(t)^{T} $, and the concatenation of the past orchestral frames define the context units ($x$) $ Context(t) = \left[ Orch(t-1)^{T} , ... , Orch(t-N)^{T} \right]^{T}$.
+
 \subsection{Evaluation}
-To evaluate the performance of our system
 \subsubsection{Frame-level accuracy}
-% Probleme que pas qu'une orch par piano score, Mais ca permet quand même d'avoir une idée.
-At each time, two frames can be compared thanks to an accuracy measure,
-For evaluating accuracy, previous studies relied on the expected frame-level accuracy \cite{boulanger2012modeling,DBLP:journals/corr/LiuR14a}, defined by the formula
+The frame level accuracy of a model over a testing set is defined as the mean value of the accuracy measured for each time frame. For each time frame, we try to predict the orchestral frame $\hat{Orch}(t)$ knowing the recent past $Orch(t-1),...,Orch(t-N)$ and the piano frame $Piano(t)$ and compare it to the original frame $Orch(t)$. The accuracy measure the difference between the predicted and original frames \cite{boulanger2012modeling,DBLP:journals/corr/LiuR14a}
 \begin{equation}
 \text{Accuracy}  = \frac{TP(t)}{TP(t) + FP(t) + FN(t)}
 \end{equation}
@@ -283,9 +310,10 @@ Instead of binary values, activation probabilities are used for the predicted sa
 
 \subsection{Database}
 We used a parallel database of piano scores and their orchestration by famous composers. The database consists of 76 \textit{XML} files. Given the complexity of the distribution we wanted to model and the reduced size of the fatabase we have accessed to, we decided to keep as a test dataset only the last half of one track from our database. Hence 75 and a half files were used to train our model. We chose to do so in order to have the best generation ability.
-For each instrument, the pitch range is reduced to the tessitura observed in the training dataset. We used a rhythmic quantization of 8 frame per beat, which means that the smallest symbolic rhythm is a $32^{th}$ note.
+For each instrument, the pitch range is reduced to the tessitura observed in the training dataset. We used a rhythmic quantization of 8 frame per beat, which means that the smallest symbolic rhythm is a $8^{th}$ note.
 
 \subsection{Results}
+
 
 
 \section{Live Orchestral Piano}
