--- a/Notes_leo/biblio.bib
+++ b/Notes_leo/biblio.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Léopold Crestel at 2015-09-23 10:18:17 +0200 
+%% Created for Léopold Crestel at 2015-09-24 12:16:40 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{bengio2009justifying,
+	Author = {Bengio, Yoshua and Delalleau, Olivier},
+	Date-Added = {2015-09-24 08:13:58 +0000},
+	Date-Modified = {2015-09-24 08:13:58 +0000},
+	Journal = {Neural computation},
+	Number = {6},
+	Pages = {1601--1621},
+	Publisher = {MIT Press},
+	Title = {Justifying and generalizing contrastive divergence},
+	Volume = {21},
+	Year = {2009}}
 
 @article{bromley1993signature,
 	Author = {Bromley, Jane and Bentz, James W and Bottou, L{\'e}on and Guyon, Isabelle and LeCun, Yann and Moore, Cliff and S{\"a}ckinger, Eduard and Shah, Roopak},
